--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 var canv = document.getElementById("ctx");
 var ctx = canv.getContext("2d");
 var x = 20;
-ctx.fillRect(x,y,100,200);
+var y = 70;
 x = 200;
-ctx.fillRect(x,y,100,200);
+var y 700;
 </script>
