--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ var canv = document.getElementById("ctx");
 var ctx = canv.getContext("2d");
 var x = 20;
 var y = 70;
-x = 200;
-var y 700;
+ctx.fillRect(x,y,100,200);
+var x = 200;
+var y = 300;
+ctx.fillRect(x,y,100,200);
 </script>
