--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <script>
 var canv = document.getElementById("ctx");
 var ctx = canv.getContext("2d");
-var x = 20;
+ctx.fillReqt(350,250,50,50);
 var y = 70;
 ctx.fillRect(x,y,100,200);
 var x = 200;
