--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 <script>
 var canv = document.getElementById("ctx");
 var ctx = canv.getContext("2d");
-ctx.fillReqt(350,250,50,50);
+ctx.fillRect(350,250,50,50);
 </script>
