--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <script>
 var canv = document.getElementById("ctx");
 var ctx = canv.getContext("2d");
-ctx.fillRect(350,250,50,50);
+var x = 7;
+
 </script>
