--- a/index.html
+++ b/index.html
@@ -4,5 +4,10 @@
 var canv = document.getElementById("ctx");
 var ctx = canv.getContext("2d");
 var x = 7;
-
+function change(){
+x = 300;
+}
+ctx.fillRect(x,100,50,50);
+change();
+ctx.fillRect(x,100,50,50);
 </script>
