--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ var ctx = canv.getContext("2d");
 var x = 0;
 setInterval(change,20);
 function change(){
-x++;
+ctx.clearRect(0,0,700,500)
 ctx.fillRect(x,250,50,50);
 }
 
