--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 var canv = document.getElementById("ctx");
 var ctx = canv.getContext("2d");
 var x = 0;
-setInterval(change,20);
+var y = 0;
 function change(){
 ctx.clearRect(0,0,700,500);
 x++;
