--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ var y = 0;
 function change(){
 ctx.clearRect(0,0,700,500);
 x++;
-ctx.fillRect(x,250,50,50);
+y++;
+ctx.fillRect(x,y,50,50);
 }
 
 </script>
