--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@ var y = 0;
 setInterval(change,20);
 function change(){
 ctx.clearRect(0,0,700,500);
-x++;
-y++;
+x  = x = mouvement
 ctx.fillRect(x,y,50,50);
+if(){
+
+{
 }
+
 
 </script>
