--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@ var y = 0;
 setInterval(change,20);
 function change(){
 ctx.clearRect(0,0,700,500);
-x  = x = mouvement
+x  = x = mouvement;
 ctx.fillRect(x,y,50,50);
-if(){
-
+if(x == 650){
+  mouvement
 {
 }
 
