--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 var canv = document.getElementById("ctx");
 var ctx = canv.getContext("2d");
 var x = 0;
-var y = 0;
+var mouvement =1;
 setInterval(change,20);
 function change(){
 ctx.clearRect(0,0,700,500);
 x  = x = mouvement;
 ctx.fillRect(x,y,50,50);
 if(x == 650){
-  mouvement
+  mouvement = -1;
 {
 }
 
