--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ setInterval(change,20);
 function change(){
 ctx.clearRect(0,0,700,500);
 x  = x = mouvement;
-ctx.fillRect(x,y,50,50);
+ctx.fillRect(x,250,50,50);
 if(x == 650){
   mouvement = -1;
 {
